--- a/Regular/300 A/Group 2/group_list.html
+++ b/Regular/300 A/Group 2/group_list.html
@@ -26,6 +26,12 @@
                 <td>ishpaps@gmail.com</td>
                 <td>0556292461</td>
             </tr>
+             <tr>
+                <td>5201040097</td>
+                <td>Ishmael Papa Abakah</td>
+                <td>richlovebg23@gmail.com</td>
+                <td>0241901918</td>
+            </tr>
            <tr>
                 <td></td>
                 <td></td>
