--- a/Regular/300 A/Group 2/group_list.html
+++ b/Regular/300 A/Group 2/group_list.html
@@ -28,7 +28,7 @@
             </tr>
              <tr>
                 <td>5201040097</td>
-                <td>Ishmael Papa Abakah</td>
+                <td>Francisca Antwi</td>
                 <td>richlovebg23@gmail.com</td>
                 <td>0241901918</td>
             </tr>
