--- a/Regular/300 A/Group 2/group_list.html
+++ b/Regular/300 A/Group 2/group_list.html
@@ -70,6 +70,13 @@
         <td>boatengfatima21@gmail.com</td>
         <td>0541937884</td>
       </tr>
+	
+      <tr>	
+        <td>5201040039</td>
+        <td>James Akwasi</td>
+        <td>jamesasamoah117@gmail.com</td>
+        <td>0553299635</td>
+      </tr>	 
 
         </tbody>
     </table>
